deleted an unnecessary modification

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </header>
       <main>
         <div class="info">
-          <figure class="info__image"><img src= /></figure>
+          <figure class="info__image"><img src /></figure>
           <div class="info__content"></div>
         </div>
         <div class="posts">
